--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
+      <nav>
+        <div class="logo">
+          <img src="./Images/computericon.png" alt="" />
+          <p>DUNDEE DEVELOPS</p>
+        </div>
 
+        <img class="nav-btn" src="./Images/hamburgermenu.png" alt="" />
+
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
+         
+        <section id="hero">
+             <h1>Dundee Anderson</h1>
+             <h2>Freelance web developer</h2>
+             <img src="./Images/coding-art.png" alt="">
+
+             <p>Developing professional websites for all types of business. My focus is on both design and functionality.
+             </p>
+        </section>
 
     </main>
-    <h1>Coming soon...</h1>
-    <footer>
 
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
