Added call to action

--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
     </header>
 
     <main>
-         
-        <section id="hero">
-             <h1>Dundee Anderson</h1>
-             <h2>Freelance web developer</h2>
-             <img src="./Images/coding-art.png" alt="">
+      <section id="hero">
+        <h1>Dundee Anderson</h1>
+        <h2>Freelance web developer</h2>
+        <img src="./Images/coding-art.png" alt="" />
 
-             <p>Developing professional websites for all types of business. My focus is on both design and functionality.
-             </p>
-        </section>
+        <p>
+          Developing professional websites for all types of business. My focus
+          is on both design and functionality.
+        </p>
 
+        <div class="call-to-action">
+          <button>SEE PROJECTS</button>
+          <button>HIRE ME</button>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
