--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
           <button>HIRE ME</button>
         </div>
       </section>
+
+
+      <section class="info-section">
+        
+      </section>
     </main>
 
     <footer></footer>
