--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo">
-          <img src="./Images/computericon.png" alt="" />
-          <p>DUNDEE DEVELOPS</p>
-        </div>
-
-        <img class="nav-btn" src="./Images/hamburgermenu.png" alt="" />
-
-        <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-        </ul>
-      </nav>
+      <div class="nav-container">
+        <nav>
+          <div class="logo">
+            <img src="./Images/computericon.png" alt="" />
+            <p>DUNDEE DEVELOPS</p>
+          </div>
+  
+          <img class="nav-btn" src="./Images/hamburgermenu.png" alt="" />
+  
+          <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -45,7 +47,7 @@
 
 
       <section class="info-section">
-        
+
       </section>
     </main>
 
