Added Info sections

--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
 
 
       <section class="info-section">
+ 
+         <div class="info-card">
+            <h3>QUALITY WORK</h3>
+            <p>Theres a lot more to a website than just looks, I utilize the latest
+              technologies to ensure your website is secure, fast, and 
+              optimized for search engines.
+            </p>
+         </div> 
+
+         <div class="info-card">
+          <h3>EXPERIENCE</h3>
+          <p>Several years of experience developing and deploying websites that
+            look good on all devices and are accessible to anyone.
+            <br>
+            HTML5, CSS, JAVASCRIPT, UI DESIGN, and much more.
+          </p>
+       </div>
 
       </section>
     </main>
