--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         </div>
       </section>
 
-
       <section class="info-section">
  
          <div class="info-card">
@@ -66,6 +65,14 @@
        </div>
 
       </section>
+
+
+     <section class="projects-section">
+        <img src="./Images/BG-ART-2.png" alt="">
+
+        <h4>PROJECTS</h4>
+     </section> 
+
     </main>
 
     <footer></footer>
