Added contact form

--- a/index.html
+++ b/index.html
@@ -89,6 +89,25 @@
 
      </section> 
 
+
+    <section class="contact-section">
+      <img src="./Images/BG-ART-2.png" alt="">
+      <h4>CONTACT</h4>
+
+
+     <form class="contact-form" action="submit">
+       <label for="email-input">Email</label>
+       <input name="email-input" type="text" placeholder="Email">
+       <label for="message-input">Message</label>
+      <textarea name="message-input" id="message-input" cols="30" rows="10">
+      </textarea>
+
+
+      <button>Send</button>
+      </form>
+    </section>
+
+
     </main>
 
     <footer></footer>
