--- a/index.html
+++ b/index.html
@@ -97,13 +97,17 @@
 
      <form class="contact-form" action="submit">
        <label for="email-input">Email</label>
-       <input name="email-input" type="text" placeholder="Email">
+       <input class="email-input" name="email-input" type="text" placeholder="Email">
+
        <label for="message-input">Message</label>
-      <textarea name="message-input" id="message-input" cols="30" rows="10">
+      <textarea name="message-input" class="message-input"></textarea>
       </textarea>
+ 
 
-
-      <button>Send</button>
+      <div class="send-row">
+        <p>TO: DundeeDevelops@gmail.com</p>
+        <button>Send</button>
+      </div>
       </form>
     </section>
 
