contact form tweaks

--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
 
      <form class="contact-form" action="submit">
        <label for="email-input">Email</label>
-       <input class="email-input" name="email-input" type="text" placeholder="Email">
-
+       <input class="email-input" name="email-input" type="text" placeholder="Your email">
+ 
        <label for="message-input">Message</label>
-      <textarea name="message-input" class="message-input"></textarea>
+      <textarea name="message-input" class="message-input" placeholder="What can I help you with?">
+       </textarea>
       </textarea>
  
 
