Cosmetic input form fixes

--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
        <input class="email-input" name="email-input" type="text" placeholder="Your email">
  
        <label for="message-input">Message</label>
-      <textarea name="message-input" class="message-input" placeholder="What can I help you with?">
-       </textarea>
+      <textarea name="message-input" class="message-input" placeholder="What can I help you with?"></textarea>
       </textarea>
  
-
+ 
       <div class="send-row">
         <p>TO: DundeeDevelops@gmail.com</p>
         <button>Send</button>
